--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
 
 <body>
   <app-root></app-root>
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARJKYuZLAoUWO0M68tJLDrbUjAz57FaGA&libraries=places">
+  </script>
 </body>
 
 </html>
